TestSuite/Verification/Error/Serial/Syntax/Control-Statement/out/BranchTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/BranchTest.hxx"
#include "includes/cuda_lib_BranchTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	int32_t a_pQM59Y5h1o;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		a_pQM59Y5h1o = 0;
	}
	if (rank == 0) {
		if (a_pQM59Y5h1o == 0) {
			a_pQM59Y5h1o = 2;
		}
	}
	if (rank == 0) {
		if (true) {
			a_pQM59Y5h1o = 3;
		} else {
			a_pQM59Y5h1o = 4;
		}
	}
	if (rank == 0) {
		if (a_pQM59Y5h1o == 3) {
			a_pQM59Y5h1o = 5;
		} else 		if (a_pQM59Y5h1o == 4) {
			a_pQM59Y5h1o = 6;
		} else {
			a_pQM59Y5h1o = 7;
		}
	}
	finishExecution();
	finishGPUExecution();
	MPI_Finalize();
	return 0;


}

